// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stateful /> renders correctly 1`] = `
<div
  onClick={[Function]}
>
  <div
    className="box red"
  >
    OFF
  </div>
</div>
`;

exports[`<Stateful /> when the component is clicked renders correctly 1`] = `
<div
  onClick={[Function]}
>
  <div
    className="box green"
  >
    ON
  </div>
</div>
`;

exports[`<Stateful /> when the component is on renders correctly 1`] = `
<div
  onClick={[Function]}
>
  <div
    className="box green"
  >
    ON
  </div>
</div>
`;
